testing page to fix low contrast error (2)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #1A5C7F; /*Change from #2589BD to #1A5C7F for web accessibility */
+    background-color: #005B94; /*Change from #2589BD to #005B94 for web accessibility */
 }
 
 /* .benefit-lead {
